--- a/boxcars-web/index.html
+++ b/boxcars-web/index.html
@@ -13,7 +13,11 @@
                 var reader = new FileReader();
                 reader.onload = function(e) {
                   var z = new Uint8Array(e.target.result);
-                  var a = window.boxcars(z, z.length);
+                  var old_len = my_memory.buffer.byteLength;
+                  my_memory.grow((z.length / 65536)  + 1)
+                  var j = new Uint8Array(my_memory.buffer);
+                  j.set(z, old_len)
+                  var a = window.boxcars(old_len, z.length);
                   alert(`${a}`)
                 };
 
